Fixing up some stuff to look way better on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -45,18 +45,35 @@ h1 {
 }
 */
 .filmInfo{
-    width: 50%;
-    background-color: #FFF;
-    opacity: .8;
+    background: rgba(256, 256, 256, 0.8);
 }
 
-.film{
+.film {
+    position: relative;
+    padding-bottom: 26.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
     opacity: 1;
+    overflow:hidden;
+}
+
+.film img {
+    overflow:hidden;
+    width: 100%;
+}
+
+.film iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .jumbotron ul {
     text-align: left;
     list-style-type: none;
+    padding:0;
 }
 
 .jumbotron li {
@@ -64,9 +81,25 @@ h1 {
     padding: 5px;
     background: white;
     border-radius: 5px;
-    padding-left: 10px;
 }
 
 .jumbotron li span{
     color: red;
+}
+
+@media (max-width: 768px) {
+  .nav-justified > li {
+    display: table-cell;
+    width: 1%;
+  }
+  .nav-justified > li > a  {
+    border-bottom: 1px solid #ddd !important;
+    border-radius: 4px 4px 0 0 !important;
+    margin-bottom: 0 !important;
+  }
+  .nav-tabs.nav-justified > .active > a,
+  .nav-tabs.nav-justified > .active > a:hover,
+  .nav-tabs.nav-justified > .active > a:focus {
+    border-bottom-color: #fff !important;
+  }
 }
